--- a/registro_usuario.html
+++ b/registro_usuario.html
@@ -18,10 +18,7 @@
 <div class="h4 text-muted text-center pt-2">Registro</div>
 <form class="pt-3">
 <div class="form-group py-2">
-<div class="input-field"> <span class="far fa-user p-2"></span> <input type="text" placeholder="Nombre" required="" class=""> </div>
-</div>
-<div class="form-group py-2">
-    <div class="input-field"> <span class="far fa-user p-2"></span> <input type="text" placeholder="Apellidos" required="" class=""> </div>
+<div class="input-field"> <span class="far fa-user p-2"></span> <input type="text" placeholder="Nombre y Apellidos" required="" class=""> </div>
 </div>
 <div class="form-group py-1 pb-2">
     <div class="input-field"> <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-envelope far fa-user m-1 " viewBox="0 0 16 16">
@@ -35,6 +32,9 @@
 <div class="form-group py-1 pb-2">
 <div class="input-field"> <span class="fas fa-lock p-2"></span> <input type="text" placeholder="Contraseña" required="" class=""> <button class="btn bg-white text-muted">  </button> </div>
 </div>
+<div class="form-group py-1 pb-2">
+  <div class="input-field"> <span class="fas fa-lock p-2"></span> <input type="text" placeholder="Repetir contraseña" required="" class=""> <button class="btn bg-white text-muted">  </button> </div>
+  </div>
  <button class="btn btn-block text-center my-3">Continuar</button>
 </form>
 </div>
