Se añade un formulario reestablecer contraseña
Aparte se modifican el footer de registro de usuario y de contacta con nosotros

--- a/inicio_sesion.html
+++ b/inicio_sesion.html
@@ -33,7 +33,7 @@
             </div>
             <!-- Remember Me & Forgot Password -->
             <div class="d-flex align-items-start">
-                <div class="remember"> <label class="option text-muted">Guardar sesión<input type="radio" name="radio"> <span class="checkmark"></span> </label> </div>
+                <div class="remember"> <label class="option text-muted">Guardar sesión<input type="radio" name="radio"> <span class=""></span> </label> </div>
                 <div class="ml-auto"> <a href="#" id="forgot">¿Olvidaste la contraseña?</a> </div>
             </div>
             <!-- Login Button -->
