Se suben varias cosas
Se cambia el registro al registro_usuarios en el html netfli y en inicio de sesion_medio_mal2. Creaciones de js de inicio de sesion,cerrar sesion,registro y recordar contraseña con uso de local storage. Se modifica el restaurar contraseña.Se añade en la pagina de inicio una opcion de cerrar sesion,contacta con nosotros,valora nuestro contenido y encuesta de usuario.

--- a/inicio.html
+++ b/inicio.html
@@ -18,11 +18,14 @@
 		<div class="contenedor">
 			<h2 class="logotipo"><a href="netfli.html">CamasTV</a></h2>
 			<nav>
-				<a href="inicio_sesion_medio_mal2.html" class="activo">Inicio</a>
 				<a href="#">Programas</a>
 				<a href="#">Películas</a>
 				<a href="#">Más Recientes</a>
 				<a href="#">Mi lista</a>
+				<a href ="contacta_con_nosotros.html"  class="active" >Contacta con nosotros</a>
+				<a href ="valore_nuestro_contenido.html"  class="active" >Valora nuestro contenido</a>
+				<a href ="encuesta_usuario.html"  class="active" >Encuesta de usuario</a>
+				<a href ="#" id="logout" class="active" >Cerrar sesion</a>
 			</nav>
 		</div>
 	</header>
@@ -56,5 +59,6 @@
 	</main>
 	<script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
 	<script src="main.js"></script>
+	<script src="logout.js"></script>
 </body>
 </html>
