--- a/netfli.html
+++ b/netfli.html
@@ -22,7 +22,7 @@
       <div class="showcase-content">
         <h1>Lo que tú quieras</h1>
         <p>Cuando tú quieras. Aqui en Camas TV</p>
-        <a href="registro.html" class="btn btn-xl"
+        <a href="registro_usuario.html" class="btn btn-xl"
           >Watch Free For 30 Days <i class="fas fa-chevron-right btn-icon"></i
         ></a>
       </div>
