--- a/inicio_sesion_medio_mal2.html
+++ b/inicio_sesion_medio_mal2.html
@@ -19,24 +19,24 @@
         <div class="h2 text-center"><a href="netfli.html">CamasTV</a></div>
         <div class="h4 text-muted text-center pt-2">Iniciar sesión</div>
         <!-- Login Form -->
-        <form class="pt-3">
+        <form class="pt-3" id="login">
             <!-- Username Field -->
             <div class="form-group py-2">
-                <div class="input-field"> <span class="far fa-user p-2"></span> <input type="text" placeholder="Usuario o correo electrónico" required="" class=""> </div>
+                <div class="input-field"> <span class="far fa-user p-2"></span> <input type="email" id="email" placeholder="Correo electrónico" required="" class=""> </div>
             </div>
             <!-- Password Field -->
             <div class="form-group py-1 pb-2">
-                <div class="input-field"> <span class="fas fa-lock p-2"></span> <input type="password" placeholder="Contraseña" required="" class=""> <button class="btn bg-white text-muted"> <span class="far fa-eye-slash"></span> </button> </div>
+                <div class="input-field"> <span class="fas fa-lock p-2"></span> <input type="password" id="contrasenna" placeholder="Contraseña" required="" class=""> <button class="btn bg-white text-muted"> <span class="far fa-eye-slash"></span> </button> </div>
             </div>
             <!-- Remember Me & Forgot Password -->
             <div class="d-flex align-items-start">
                 <div class="remember"> <label class="option text-muted">Guardar sesión<input type="radio" name="radio"> <span class="checkmark"></span> </label> </div>
-                <div class="ml-auto"> <a href="#" id="forgot">¿Olvidaste la contraseña?</a> </div>
+                <div class="ml-auto"> <a href="restablecer_contraseña.html" id="forgot">¿Olvidaste la contraseña?</a> </div>
             </div>
             <!-- Login Button -->
-            <button class="btn btn-block text-center my-3">Log in</button>
+            <button type="button" class="btn btn-block text-center my-3" onclick="login()">Log in</button>
             <!-- Register Link -->
-            <div class="text-center pt-3 text-muted">¿Aún no estas registrado?<a href="registro.html">Registrarse ahora</a></div>
+            <div class="text-center pt-3 text-muted">¿Aún no estas registrado?<a href="registro_usuario.html">Registrarse ahora</a></div>
         </form>
     </div>
     <!-- Footer -->
@@ -142,5 +142,6 @@
     <!-- Bootstrap JS and other scripts -->
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
     <script type="text/javascript" src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js"></script>
+    <script src="login.js"></script>
 </body>
 </html>
