--- a/registro_usuario.html
+++ b/registro_usuario.html
@@ -3,48 +3,46 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>registro_usuario</title>
+    <title>Registro Usuario</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" rel="stylesheet">
-    <link href="registro_usuario.css" rel="stylesheet"> 
-</head>
-<script type="text/javascript" src=""></script>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
-    <script type="text/javascript" src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js"></script>
+    <link href="registro_usuario.css" rel="stylesheet">
 </head>
 <body oncontextmenu="return false" class="snippet-body">
-<div class="wrapper bg-white">
-<div class="h2 text-center">CamasTV</div>
-<div class="h4 text-muted text-center pt-2">Registro</div>
-<form class="pt-3">
-<div class="form-group py-2">
-<div class="input-field"> <span class="far fa-user p-2"></span> <input type="text" placeholder="Nombre y Apellidos" required="" class=""> </div>
-</div>
-<div class="form-group py-1 pb-2">
-    <div class="input-field"> <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-envelope far fa-user m-1 " viewBox="0 0 16 16">
+    <div class="wrapper bg-white">
+        <div class="h2 text-center">CamasTV</div>
+        <div class="h4 text-muted text-center pt-2">Registro</div>
+        <form class="pt-3" id="registro">
+            <div class="form-group py-2">
+                <div class="input-field"> <span class="far fa-user p-2"></span> <input type="text" id="nombre" placeholder="Nombre" required="" class=""> </div>
+            </div>
+            <div class="form-group py-1 pb-2">
+                <div class="input-field"> <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-envelope far fa-user m-1 " viewBox="0 0 16 16">
         <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1zm13 2.383-4.708 2.825L15 11.105zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741M1 11.105l4.708-2.897L1 5.383z"/>
-      </svg> <input type="email" placeholder="Correo electrónico" required="" class=""> <button class="btn bg-white text-muted">  </button> </div>
+      </svg> <input type="email"id="email" placeholder="Correo electrónico" required="" class=""> </div>
+            </div>
+            <div class="form-group py-1 pb-2">
+                <div class="input-field"> <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-phone far fa-user m-1 ">
+            <path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M5 4h4l2 5l-2.5 1.5a11 11 0 0 0 5 5l1.5 -2.5l5 2v4a2 2 0 0 1 -2 2a16 16 0 0 1 -15 -15a2 2 0 0 1 2 -2" /></svg> <input type="tel" id="telefono" placeholder="Teléfono" required="" class="">  </div>
+            </div>
+            <div class="form-group py-1 pb-2">
+                <div class="input-field"> <span class="fas fa-lock p-2"></span> <input type="password" id="contrasenna" placeholder="Contraseña" required="" class=""> </div>
+            </div>
+            <div class="form-group py-1 pb-2">
+                <div class="input-field"> <span class="fas fa-lock p-2"></span> <input type="password" id="repeContrasenna" placeholder="Repetir contraseña" required="" class=""></div>
+            </div>
+            <button type="submit" class="btn btn-block text-center my-3">Continuar</button>
+        </form>
     </div>
-    <div class="form-group py-1 pb-2">
-        <div class="input-field"> <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-phone far fa-user m-1 ">
-            <path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M5 4h4l2 5l-2.5 1.5a11 11 0 0 0 5 5l1.5 -2.5l5 2v4a2 2 0 0 1 -2 2a16 16 0 0 1 -15 -15a2 2 0 0 1 2 -2" /></svg> <input type="tel" placeholder="Teléfono" required="" class=""> <button class="btn bg-white text-muted">  </button> </div>
+
+    <!-- Footer -->
+    <footer class="text-center text-lg-start bg-body-tertiary text-muted">
+        <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
+            © 2024 Copyright:
+            <a class="text-reset fw-bold" href="https://mdbootstrap.com/">piratabarbanegra.com</a>
         </div>
-<div class="form-group py-1 pb-2">
-<div class="input-field"> <span class="fas fa-lock p-2"></span> <input type="text" placeholder="Contraseña" required="" class=""> <button class="btn bg-white text-muted">  </button> </div>
-</div>
-<div class="form-group py-1 pb-2">
-  <div class="input-field"> <span class="fas fa-lock p-2"></span> <input type="text" placeholder="Repetir contraseña" required="" class=""> <button class="btn bg-white text-muted">  </button> </div>
-  </div>
- <button class="btn btn-block text-center my-3">Continuar</button>
-</form>
-</div>
-<script type="text/javascript"></script>
-<!-- Footer -->
-<footer class="text-center text-lg-start bg-body-tertiary text-muted">
-    </section>
-    <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
-      © 2024 Copyright:
-      <a class="text-reset fw-bold" href="https://mdbootstrap.com/">piratabarbanegra.com</a>
-    </div>
-  </footer>
-</body></html>
+    </footer>
+
+    <script src="registro_usuario.js"></script>
+</body>
+</html>
