--- a/encuesta_usuario.html
+++ b/encuesta_usuario.html
@@ -12,7 +12,7 @@
         <!-- Google Fonts -->
         <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Poppins&display=swap" rel="stylesheet">
         <!-- Inline Styles -->
-        <link rel="stylesheet" href="inicio_sesion.css">
+        <link rel="stylesheet" href="encuesta_usuario.css">
     </head>
    
 </head>
