Mi lista y fondos cambiados

--- a/crudPeliculasySeries.html
+++ b/crudPeliculasySeries.html
@@ -40,7 +40,7 @@
 
                 </tbody>
             </table>
-            <a href="inicio_sesion_medio_mal2.html" class="salir">Salir</a>
+            <a href="inicio_sesion.html" class="salir">Salir</a>
         </section>
     </main>
     <script src="crudPeliculasySeries.js"></script>
