--- a/inicio_sesion.html
+++ b/inicio_sesion.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -14,77 +13,135 @@
     <!-- Inline Styles -->
     <link rel="stylesheet" href="inicio_sesion.css">
 </head>
-
 <body oncontextmenu="return false" class="snippet-body">
-    <!-- Main Wrapper -->
     <div class="wrapper bg-white">
         <!-- Header -->
-        <div class="h2 text-center">CamasTV</div>
+        <div class="h2 text-center"><a href="netfli.html">CamasTV</a></div>
         <div class="h4 text-muted text-center pt-2">Iniciar sesión</div>
         <!-- Login Form -->
-        <form class="pt-3">
+        <form class="pt-3" id="login">
             <!-- Username Field -->
             <div class="form-group py-2">
-                <div class="input-field"> <span class="far fa-user p-2"></span> <input type="text" placeholder="Usuario o correo electrónico" required="" class=""> </div>
+                <div class="input-field"> <span class="far fa-user p-2"></span> <input type="email" id="email" placeholder="Correo electrónico" required="" class=""> </div>
             </div>
             <!-- Password Field -->
             <div class="form-group py-1 pb-2">
-                <div class="input-field"> <span class="fas fa-lock p-2"></span> <input type="password" placeholder="Contraseña" required="" class=""> <button class="btn bg-white text-muted"> <span class="far fa-eye-slash"></span> </button> </div>
+                <div class="input-field"> <span class="fas fa-lock p-2"></span> <input type="password" id="contrasenna" placeholder="Contraseña" required="" class=""> <button class="btn bg-white text-muted"> <span class="far fa-eye-slash"></span> </button> </div>
             </div>
             <!-- Remember Me & Forgot Password -->
             <div class="d-flex align-items-start">
-                <div class="remember"> <label class="option text-muted">Guardar sesión<input type="radio" name="radio"> <span class=""></span> </label> </div>
-                <div class="ml-auto"> <a href="#" id="forgot">¿Olvidaste la contraseña?</a> </div>
+                <div class="remember"> <label class="option text-muted">Guardar sesión<input type="radio" name="radio"> <span class="checkmark"></span> </label> </div>
+                <div class="ml-auto"> <a href="restablecer_contraseña.html" id="forgot">¿Olvidaste la contraseña?</a> </div>
             </div>
             <!-- Login Button -->
-            <button class="btn btn-block text-center my-3">Log in</button>
+            <button type="button" class="btn btn-block text-center my-3" onclick="login()">Log in</button>
             <!-- Register Link -->
-            <div class="text-center pt-3 text-muted">¿Aún no estas registrado?<a href="#">Registrarse ahora</a></div>
+            <div class="text-center pt-3 text-muted">¿Aún no estas registrado?<a href="registro_usuario.html">Registrarse ahora</a></div>
         </form>
     </div>
-
     <!-- Footer -->
-    <footer class="text-center text-lg-start bg-body-tertiary text-muted">
-        <!-- Social Media Section -->
+    <footer class="text-center text-lg-start bg-body-tertiary text-muted bg-white">
         <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
-            <!-- Left -->
             <div class="me-5 d-none d-lg-block">
                 <span>Síguenos en nuestras redes sociales:</span>
             </div>
-            <!-- Right -->
             <div>
-                <!-- Social Media Icons -->
+                <a href="#" class="me-4 text-reset">
+                    <i class="fab fa-facebook-f"></i>
+                </a>
+                <a href="#" class="me-4 text-reset">
+                    <i class="fab fa-twitter"></i>
+                </a>
+                <a href="#" class="me-4 text-reset">
+                    <i class="fab fa-google"></i>
+                </a>
+                <a href="#" class="me-4 text-reset">
+                    <i class="fab fa-instagram"></i>
+                </a>
+                <a href="#" class="me-4 text-reset">
+                    <i class="fab fa-linkedin"></i>
+                </a>
+                <a href="#" class="me-4 text-reset">
+                    <i class="fab fa-github"></i>
+                </a>
             </div>
         </section>
-        <!-- Links Section -->
         <section class="">
-            <!-- Container -->
             <div class="container text-center text-md-start mt-5">
-                <!-- Grid Row -->
                 <div class="row mt-3">
-                    <!-- Grid Column -->
                     <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-                        <!-- Content -->
+                        <h6 class="text-uppercase fw-bold mb-4">
+                            <i class="fas fa-gem me-3"></i>Angelica&Java S.L.
+                        </h6>
+                        <p>
+                            Ofrecemos un nuevo y nada novedoso servicio de Streaming, en el que podrás
+                            disfrutar de las mejores y últimas películas, series, partidos de LaLiga, La Champions League.
+                            Todo esto y mucho más a un precio totalmente gratuito, ya que nosotros somos una
+                            empresa muy en favor a la piratería, pues sin ella, no podríamos disfrutar de tanto
+                            contenido que existe en internet, así que, como homenaje, sacamos una web pirata ilegal
+                            de contenido con Copyright.
+                        </p>
                     </div>
-                    <!-- Grid Column -->
-                    <!-- Repeat Grid Columns for different sections -->
+                    <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+                        <h6 class="text-uppercase fw-bold mb-4">
+                            Conoce a los creadores
+                        </h6>
+                        <p>
+                            <a href="#!" class="text-reset">RubeNaN</a>
+                        </p>
+                        <p>
+                            <a href="#!" class="text-reset">MariArray</a>
+                        </p>
+                        <p>
+                            <a href="#!" class="text-reset">RicarDotado</a>
+                        </p>
+                        <p>
+                            <a href="#!" class="text-reset">CarloScript</a>
+                        </p>
+                    </div>
+                    <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+                        <h6 class="text-uppercase fw-bold mb-4">
+                            Páginas inspiradoras
+                        </h6>
+                        <p>
+                            <a href="#!" class="text-reset">RojaDirecta</a>
+                        </p>
+                        <p>
+                            <a href="#!" class="text-reset">Playdede</a>
+                        </p>
+                        <p>
+                            <a href="#!" class="text-reset">Elamigos</a>
+                        </p>
+                        <p>
+                            <a href="#!" class="text-reset">AnimeFLV</a>
+                        </p>
+                    </div>
+                    <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+                        <h6 class="text-uppercase fw-bold mb-4">Contáctanos</h6>
+                        <p><i class="fas fa-home me-3"></i> Sevilla, Calle de los piratas 14</p>
+                        <p>
+                            <i class="fas fa-envelope me-3"></i>
+                            piratabarbablanca@info.es
+                        </p>
+                        <p><i class="fas fa-phone me-3"></i> + 34 954 367 185</p>
+                        <p><i class="fas fa-print me-3"></i> + 34 643 522 896</p>
+                    </div>
                 </div>
-                <!-- Grid Row -->
             </div>
-            <!-- Container -->
         </section>
-        <!-- Copyright Section -->
+        <!-- Section: Links  -->
+
+        <!-- Copyright -->
         <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
             © 2024 Copyright:
             <a class="text-reset fw-bold" href="https://mdbootstrap.com/">piratabarbanegra.com</a>
         </div>
+        <!-- Copyright -->
     </footer>
     <!-- Footer -->
     <!-- Bootstrap JS and other scripts -->
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
     <script type="text/javascript" src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js"></script>
-    <!-- Other Scripts -->
-    <script type="text/javascript"></script>
+    <script src="login.js"></script>
 </body>
-
 </html>
