--- a/netfli.html
+++ b/netfli.html
@@ -16,12 +16,12 @@
   <body>
     <header class="showcase">
       <div class="showcase-top">
-        <img src="logo.png" alt="Camas" />
-        <a href="inicio_sesion_medio_mal2.html" class="btn btn-rounded">Sign In</a>
+        <img src="img/logo.png" alt="Camas" />
+        <a href="inicio_sesion.html" class="btn btn-rounded">Sign In</a>
       </div>
       <div class="showcase-content">
         <h1>Lo que tú quieras</h1>
-        <p>Cuando tú quieras. Aqui en Camas TV</p>
+        <p>Y muchísimo más si nos pones un 10</p>
         <a href="registro_usuario.html" class="btn btn-xl"
           >Watch Free For 30 Days <i class="fas fa-chevron-right btn-icon"></i
         ></a>
