--- a/contacta_con_nosotros.html
+++ b/contacta_con_nosotros.html
@@ -31,6 +31,7 @@
     </div>
     
     <button class="btn btn-block text-center my-3">Enviar</button>
+    <a class="btn btn-block text-center my-3" href="home.html">Volver a Home</a>
     </div>
     </form>
     </div>
