--- a/registro_usuario.html
+++ b/registro_usuario.html
@@ -31,7 +31,7 @@
             <div class="form-group py-1 pb-2">
                 <div class="input-field"> <span class="fas fa-lock p-2"></span> <input type="password" id="repeContrasenna" placeholder="Repetir contraseña" required="" class=""></div>
             </div>
-            <button type="submit" class="btn btn-block text-center my-3">Continuar</button>
+            <button type="submit" class="btn btn-block text-center my-3" id="continuar">Continuar</button>
         </form>
     </div>
 
