--- a/valore_nuestro_contenido.html
+++ b/valore_nuestro_contenido.html
@@ -14,8 +14,11 @@
         <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
         <script type="text/javascript" src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js"></script>
     </head>
+
+
     <body oncontextmenu="return false" class="snippet-body">
     <div class="wrapper bg-white">
+    <form id="form">
     <div class="h4 text-muted text-center pt-2">Valoración del contenido</div>
         <div class="parr">
             <p>Apreciamos mucho las valoraciones y comentarios de nuestros clientes, para así mantener la plataforma y asegurar su disfrute, por ello le pedimos colaboración con esta pequeña encuesta de valoración de contenido</p>
@@ -25,13 +28,12 @@
         <div class="form-group py-1 pb-2">
             <div class="form-group py-2">
                 <div class="form-group py-2">
-                    <div class="input-field"> <span class="far fa-user p-2"></span> <input type="text" placeholder="Nombre y Apellidos" required="" class=""> </div>
+                    <div class="input-field"> <span class="far fa-user p-2"></span> <input type="text" placeholder="Nombre y Apellidos" id="nombreyapellidos" >  </div>
                     </div>
             <div class="input-field"> <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="violet" class="bi bi-envelope far fa-user m-1 " viewBox="0 0 16 16">
                 <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1zm13 2.383-4.708 2.825L15 11.105zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741M1 11.105l4.708-2.897L1 5.383z"/>
-              </svg> <input type="email" placeholder="Correo electrónico" required="" class=""> <button class="btn bg-white text-muted">  </button> </div>
+              </svg> <input type="email" placeholder="Correo electrónico" id="email"> <button class="btn bg-white text-muted" for="emailjs_email">  </button> </div>
             </div>
-
             <div class="rating">
                 <input type="radio" name="clr1" style="--c:#ff9933">
                 <input type="radio" name="clr1" style="--c:#ff9933">
@@ -39,12 +41,13 @@
                 <input type="radio" name="clr1" style="--c:#ff9933">
                 <input type="radio" name="clr1" style="--c:#ff9933">
                </div>
-    <div class="form-group py-1 pb-2">
-    <textarea class="input-field w-100 text-black" placeholder="Puedes dejarnos un comentario para sugerir contenido que te gustaria ver o mejoras para la plataforma :)" maxlength="300" rows="9.5"></textarea>
-    </div>
+        <div class="form-group py-1 pb-2">
+        <textarea class="input-field w-100 text-black" placeholder="Puedes dejarnos un comentario para sugerir contenido que te gustaria ver o mejoras para la plataforma :)" maxlength="300" rows="9.5" for="emailjs_valoracion"></textarea>
+        </div>
     
-    <button class="btn btn-block text-center my-3">Enviar valoración</button>
-    </div>
+     <button class="btn btn-block text-center my-3" id="button" value="Send Email">Enviar valoración</button>
+     <a class="btn btn-block text-center my-3" href="home.html">Volver a Home</a>
+        </div>
     </form>
     </div>
     <script type="text/javascript"></script>
@@ -56,4 +59,6 @@
           <a class="text-reset fw-bold" href="https://mdbootstrap.com/">piratabarbanegra.com</a>
         </div>
       </footer>
-    </body></html>
+      <script src="valore_nuestro_contenido.js"></script>
+    </body>
+    </html>
